--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -8,6 +8,7 @@
                 <h1 class="mt-3">Search for Availability</h1>
 
                 <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    <input type="text" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}" hidden>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="row">
                         <div class="col">
